force-app/main/default/objects/Cost_Items__c/Cost_Items__c.object-meta.xml
<CustomObject>
    <description>The purpose of this object is to tracked planned and actual IT work costs back to a project.  Project budgets and costs can be rolled up to a portfolio or back to the business unit sponsor via reports and dashboards to help identify the value of IT services.</description>
    <label>Budget &amp; Cost Item</label>
    <nameField>
        <label>Cost Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget &amp; Cost Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>