force-app/main/default/objects/Cost_Items__c/fields/Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Costs__c</fullName>
    <label>Actual Costs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>