force-app/main/default/objects/Cost_Items__c/fields/Alternatives__c.field-meta.xml
<CustomField>
    <fullName>Alternatives__c</fullName>
    <label>Alternatives</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>