force-app/main/default/objects/Cost_Items__c/fields/Capital_Expense__c.field-meta.xml
<CustomField>
    <fullName>Capital_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Costs that are a part of investments in your business and are called capital expenses. Capital expenses are considered assets.  3 types of capital cost include; business start-up costs , business assets, and business improvements.</inlineHelpText>
    <label>Capital Expense</label>
    <type>Checkbox</type>
</CustomField>