force-app/main/default/objects/Cost_Items__c/fields/Cost_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Description__c</fullName>
    <label>Cost Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>