force-app/main/default/objects/Cost_Items__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Budget Expectation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>