force-app/main/default/objects/Cost_Items__c/fields/Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reason__c</fullName>
    <inlineHelpText>If the cost payment is in an &quot;on-hold&quot; status, please enter the reason for refusal of payment.</inlineHelpText>
    <label>Dispute Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>