force-app/main/default/objects/Cost_Items__c/fields/Estimated_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Costs__c</fullName>
    <label>Estimated Costs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>