force-app/main/default/objects/Cost_Items__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>PPM_Project__c</referenceTo>
    <relationshipName>R00N80000002lUwbEAE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>