force-app/main/default/objects/Cost_Items__c/fields/TheCost_Type__c.field-meta.xml
<CustomField>
    <fullName>TheCost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Labor</fullName>
            </value>
            <value>
                <fullName>Contractor Labor</fullName>
            </value>
            <value>
                <fullName>Hardware Costs</fullName>
            </value>
            <value>
                <fullName>Software Costs</fullName>
            </value>
            <value>
                <fullName>Service Costs</fullName>
            </value>
            <value>
                <fullName>Maintenance Costs</fullName>
            </value>
            <value>
                <fullName>Other Costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>