force-app/main/default/objects/Cost_Items__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <formula>Estimated_Costs__c - Actual_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>